--- a/TrabalhoArvoresED/src/main/resources/bibliografia.bib
+++ b/TrabalhoArvoresED/src/main/resources/bibliografia.bib
@@ -4,3 +4,19 @@
 	        year   = {2005},
 	        isbn   = {0-471-73884-0},
 	}
+
+@misc { MINIMAX,
+		author = {Diversos},
+		title = {{Minimax}},
+		howpublished = "\url{http://en.wikipedia.org/wiki/Minimax}",
+		year = {2013}, 
+		note = "[acessado em 19 de Fevereiro de 2013]"
+}
+
+@misc { MANCALA,
+		author = {Diversos},
+		title = {{Mancala}},
+		howpublished = "\url{http://pt.wikipedia.org/wiki/Mancala}",
+		year = {2013}, 
+		note = "[acessado em 19 de Fevereiro de 2013]"
+}
