--- a/TrabalhoArvoresED/src/main/resources/relatorio.tex
+++ b/TrabalhoArvoresED/src/main/resources/relatorio.tex
@@ -77,7 +77,7 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
  
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Avaliação de Expressões Aritméticas\\Forma Posfixa}
+{ \huge \bfseries Árvores de Jogos\\$Game Trees$}
 \HRule
 \vspace{0.75cm}
 \large CIC - Departamento de Ciência da Computação\\
@@ -101,335 +101,74 @@ Eduardo A. P. Alchieri
 \vfill
  
 % Bottom of the page
-{\large Dezembro de 2012}
+{\large Fevereiro de 2013}
 \end{center}
 \end{titlepage}
 
 \pagestyle{plain}
 
-%\begin{abstract}
-%Através do estudo de estrututa de dados, este trabalho tem o objetivo a confecção de um projeto, onde deverá ser feito um $software$ capaz de de validar, avaliar e realizar a conversão de uma expressão aritmética escrita em forma infixa para a forma posfixa.
-%\end{abstract}
-
 \section{Introdução} 
-Através do estudo de estrututa de dados, este trabalho tem o objetivo a confecção de um projeto, onde deverá ser feito um $software$ capaz de de validar, avaliar e realizar a conversão de uma expressão aritmética escrita em forma infixa para a forma posfixa.
+Através do estudo de estrututa de dados, este trabalho tem o objetivo a confecção de um projeto, onde deverá ser feito um $software$ que utilize uma  árvore genérica, chamada de $game tree$, para implementar a inteligência artificial de um jogo de tabuleiro utilizando o algoritmo conhecido como $Minimax$.
 
-Dada uma expressão aritmética qualquer, inicialmente iremos realizar sua validação, verificando se todos os parênteses abertos na expressão foram devidamente fechados, ou seja, procurando por leves inconsistencias na expressão aritmética. 
-A seguir, iremos converter a expressão de sua forma infixa para a forma posfixa, conforme exemplo abaixo:
+Neste projeto foi utilizado o jogo de tabuleiro Mancala (\hyperlink{http://pt.wikipedia.org/wiki/Mancala}{ http://pt.wikipedia.org/wiki/Mancala}), onde o objetivo geral do jogo é mover o maior número de peças para a "vala" do jogador, que é a cavidade mais a direita do tabuleiro (demais regras do jogo podem ser obtidas no link citado).
 
-Exemplo I:
-
-Forma infixa: \(A*B+C-(D/E+F)\)
-
-Forma posfixa: \(A B*C+D E/F+-\)
-
-Exemplo II:
-
-Forma infixa: \(10*5+6-(8/2+7)\)
-
-Forma posfixa: \(10\ 5* 6+ 8 2/7 +-\)
-
-Após obtermos a forma posfixa da expressão iremos realizar sua avaliação, isto é, efetuar o cálculo da expressão e exibir seu resultado, caso a entrada de parâmetros seja numérica.
+O algoritmo $Minimax$ é utilizado para indicar qual a melhor jogada a ser realizada a partir da disposição atual do tabuleiro utilizando uma árvore de jogadas possíveis. A idéia central do algoritmo é que os jogadores sempre escolherão a jogada que lhe traga maior benefício em detrimento do oponente. (\hyperlink{http://en.wikipedia.org/wiki/Minimax}{http://en.wikipedia.org/wiki/Minimax}
 
 \section{Implementação}
-A implementação do código foi realizada utilizando a linguagem de programação Java (javac 1.6.0\_37) através da plataforma de desenvolvimento Netbeans 7.0.1.\\
+A implementação do código foi realizada utilizando a linguagem de programação Java (javac 1.7.0\_13) através da plataforma de desenvolvimento Netbeans 7.2.1.\\
 
 As seguintes classes foram criadas:
 \begin{itemize}
+  \item Arvore.java   
+  \item ListaLigada.java
+  \item MancalaConsole.java
+  \item No.java
   \item Elemento.java
-  \item Pilha.java
-  \item PilhaVaziaException.java
-  \item ExpressaoAritmetica.java
-  \item ExpressaoGUI.java
-  \item ProcessadorException.java
+  \item Mancala.java
+  \item MancalaException.java
 \end{itemize}
+
+\subsection{MancalaConsole.java}
+Classe que possui a função $main$ do programa, ou seja, a primeira função a ser chamada quando o programa é executado, sua função principal é fornecer uma interface via linha de comando pela qual o usuário irá interagir com o sistema;
+
+\subsection{MancalaException.java}
+Utilizada para indicar que ocorreu um erro dentro da execução do programa.
+
+\subsection{Arvore.java}
+Classe que implementa as funções básicas de uma árvore, possui somente o campo $raiz$ do tipo $No$ e uma função que retorna um booleano caso a árvore esteja vazia.
+
+\subsection{No.java}
+Representa um nó de uma árvore, possui um valor (utilizado pela função $Minimax$), um booleano $alpha$ que indica de qual jogador é a "vez" de jogar, um objeto do tipo No chamado de "pai", que é uma referência para o nó "pai", necessário uma vez que o algoritmo $Minimax$ é executado no sentido das folhas para a raiz da árvore, além disso, possui também uma lista ligada que representa os "filhos" deste nó e um número inteiro que representa qual casa foi movida na mancala para que ela chegasse no estado atual.
+
+\subsection{ListaLigada.java}
+Implementa uma lista encadeada que possui uma referência para o primeiro elemento da lista além das funcões utilitárias de inserção na lista e verificação de lista vazia.
 
 \subsection{Elemento.java}
-Classe que serve de base para implementação de uma Pilha, possui somente os campos valor:Object e proximo:Elemento e seus métodos auxiliares. Como "valor" é do tipo Object, esta implamentação de pilha é genérica e servirá a qualquer tipo de dados.
-A classe Elemento carrega os objetos contidos em uma Pilha.
+Classe utilizada como unidade básica da lista ligada.
 
-\subsection{Pilha.java}
-Possui os campos tamanho:int, que contém o tamanho corrente da pilha e, topo:Elemento, onde está indicado o elemento localizado no topo da Pilha. Os métodos implementados são os necessários para a utilização da pilha: 
-\begin{itemize}
-  \item public void empilhar(Object valor);\\
-Para empilhar elementos na Pilha (operação $push$).
-  \item public Object desempilhar(\ ) throws PilhaVaziaException;\\Para desempilhar elementos da Pilha (operação $pop$), caso a Pilha esteja vazia, uma mensagem de erro é lançada ao sistema.
-  \item public int getTamanho(\ );\\Exibe o tamanho da Pilha.
-  \item public boolean isVazio(\ );\\Checa se a Pilha está vazia.
-  \item public Object getTopo(\ ) throws PilhaVaziaException;\\Lê o objeto no topo da Pilha.
-\end{itemize}
+\subsection{Mancala.java}
+Representa o tabuleiro do jogo, contém a "inteligência" necessária para mover as peças de uma casa e redistribuí-las corretamente conforme as regras do jogo e, após a movimentação das peças, indica de quem é a "vez de jogar", indica também se o jogo terminou. Além disso, nesta classe também está implementado o algoritmo $Minimax$, ressaltamos que a questão mais importante do algoritmo é a função de avaliação da Mancala. Em nosso projeto, definimos que a avaliação da Mancala é realizada pela diferença entre a quantidade de peças dos jogadores em suas "valas", assim, o computador irá escolher jogadas que maximizem o número de peças em sua "vala" e minimize do oponente.
 
-\subsection{PilhaVaziaException.java}
-Classe criada para identificar a mensagem de erro lançada, caso tente-se desempilhar uma Pilha vazia.
+\subsection{Execução do programa}
+Quando o programa é executado, inicialmente ele solicita que o usuário informe qual o número de níveis devem ser utilizados na criação da árvore de jogadas, em nossos testes, valores acima de 8 tornaram o sistema instável devido à utilização de toda a memória do computador.
 
-\subsection{ExpressaoAritmetica.java}
-Classe principal do programa, possui o campo expressao:String que deve ser iniciado com a expressão a ser trabalhada, são implementados os seguintes métodos:
+É então instanciado um novo objeto do tipo Mancala, que representa o tabuleiro de jogadas, então inicia-se um loop que é executado enquanto o jogo não terminar (esta informação é obtida diretamente do objeto Mancala).
 
-\subsubsection{private boolean possuiCaracteresInvalidosNumericos(\ )}
-Este método retorna  \emph{$true$}, caso a expressão aritmética numérica informada na classe possua caracteres estranhos à uma expressão aritmética numérica válida, para isso, utilizou-se uma expressão regular. 
+O próximo passo do programa é identificar de quem é a "vez de jogar", caso seja do jogador humano, é solicitado que este informe a casa a ser movida, caso seja a vez do computador, são seguidos os seguintes passos:
 
-\subsubsection{private boolean possuiCaracteresInvalidosVariaveis(\ )}
-Este método retorna \emph{$true$} caso a expressão algébrica sob forma de variáveis (\(A+B*C\)) informada na classe possua caracteres estranhos à uma expressão válida, para isso, utilizou-se uma expressão regular. 
+\begin{enumerate}
+\item Cria-se uma árvore de jogadas a partir do estado atual da Mancala com o número de níveis informados pelo usuário;
+\item Aplica-se o algoritmo $Minimax$ à árvore gerada;
+\item Identifica-se na árvore resultante qual deve ser o movimento adotado pelo computador;
+\item O computador move a casa indicada pelo algoritmo;
+\item São impressos em tela o tempo gasto de processamento e o número de jogadas analisadas;
+\end{enumerate}
 
-\subsubsection{public int avaliar(\ ) throws ProcessadorException}
-Dada uma expressão aritmética numérida válida, este método retorna o valor resultante da expressão,  \emph{representa o requisito 3.4 do trabalho}.
+\subsection{Testes}
+Foram criadas as classes de teste "ArvoreTeste.java" e "MinimaxTeste.java", nestes testes foi utilizado como referência o exemplo da aplicação do algoritmo $Minimax$ cuja imagem de nome "701px-Minimax.svg.png" se encontra junto do projeto, foi comparada a árvore resultante e identificamos que estas eram idênticas.
 
-\subsubsection{public void validarVariavel(\ ) throws ProcessadorException}
-Valida uma expressão algébrica formada por variáveis simbólicas.
-
-\subsubsection{public void validarNumerico(\ ) throws ProcessadorException}
-Valida uma expressão aritmética formada por valores numéricos.
-
-\subsubsection{public static int getPrioridade(String operador) throws ProcessadorException}
-Retorna a prioridade do operador aritmético informado (multiplicação, divisão, soma, subtração).
-
-\subsubsection{public static boolean isParenteses(String s)}
-Retorna \emph{$true$} caso o caractere informado seja um parêntese.
-
-\subsubsection{public static boolean isOperador(String s)}
-Retorna \emph{$true$} caso o caractere informado seja um operador aritmético válido (+, -, *, /).
-
-\subsubsection{public String getPosfixa(boolean comVariaveis) throws ProcessadorException}
-Retorna a expressão aritmética dada para sua forma posfixa, \emph{representa o requisito 3.3 do trabalho}.
-
-\subsubsection{public String getExpressao(\ )}
-Retorna a expressão infixa associada ao objeto.
-
-\subsubsection{public void setExpressao(String expressao) }
-Atribui ao objeto a expressão aritmética infixa a ser trabalhada.
-
-\subsubsection{public static boolean isValorVariavel(String s)}
-Verifica se o caractere apresentado representa uma variável simbólica, ou seja, uma letra do conjunto [A-Z].
-
-\subsubsection{public boolean isExpressaoValida(\ )}
-Retorna \emph{$true$} caso os parênteses da expressão dada estejam corretamente aninhados e balanceados, \emph{representa o requisito 3.2 do trabalho}.
-
-\subsubsection{public String[\ ] getVetorNumerico(\ )}
-Transforma a expressão aritmética numérica infixa em um vetor de Strings que representam cada componente da expressão.
-
-\subsubsection{public String[\ ] getVetorVariavel(\ )}
-Transforma a expressão aritmética com variáveis simbólicas infixa em um vetor de Strings que representam cada componente da expressão.
-
-\subsubsection{public String[\ ] getParenteses(\ )}
-Retorna um vetor de Strings contendo todos os parenteses da expressão.
-
-\subsubsection{public static String[\ ] processaRegex(String regex, String s)}
-Método utilitário usado para converter uma String em um vetor de Strings utilizando uma expressão regular.
-
-\subsection{ExpressaoGUI.java}
-Classe que representa a interface gráfica (GUI - $Graphical$ $User$ $Interface$), utilizada pelo usuário na execução do programa.
-
-\subsection{ProcessadorException.java}
-Exceção criada para identificar erros que decorrem do processamento da expressão aritmética.
-
-\section{Estudo de Complexidade}
-Um estudo acerca da complexidade dos métodos apresentado foi realizado, como requisitos para o trabalho, são eles:
-
-\subsection{public boolean isExpressaoValida()}
-\begin{lstlisting}
-    public boolean isExpressaoValida() {
-        Pilha p = new Pilha();
-        String[] vetor = getParenteses();
-        for (String e : vetor) {
-            if ("(".equals(e)) {
-                p.empilhar(e);
-            } else {
-                try {
-                    p.desempilhar();
-                } catch (PilhaVaziaException ex) {
-                    return false;
-                }
-            }
-        }
-        return p.isVazio();
-    }
-\end{lstlisting}
-Estudo da complexidade linha a linha:
-\begin{itemize}
-  \item Linha 2 - 1
-  \item Linha 3 - 1
-  \item Linha 4 - n
-  \item Linha 5 - n
-  \item Linha 6 - n/2
-  \item Linha 7 - n/2
-  \item Linha 15 - 1
-\end{itemize}
-Ao final teremos \(3n+3\), ou seja \(O(n)=n\).
-
-Ou seja, a curva $O(n)$ apresenta um crescimento linear, que varia de acordo com $n$ (a quantidade de elementos da pilha).
-
-\subsection{public String getPosfixa(boolean comVariaveis) throws ProcessadorException}
-\begin{lstlisting}
-    public String getPosfixa(boolean comVariaveis) throws ProcessadorException {        
-        String[] vetor;       
-        if(comVariaveis){
-            validarVariavel();
-            vetor = getVetorVariavel();
-        }else{
-            validarNumerico();
-            vetor = getVetorNumerico();
-        }       
-        String resposta = "";
-        Pilha pilha = new Pilha();       
-        for (String e : vetor) {
-            if (!comVariaveis && isValorNumerico(e)) {
-                resposta += " " + e;
-            }          
-            if (comVariaveis && isValorVariavel(e)) {
-                resposta += " " + e;
-            }
-            if (isOperador(e)) {
-                while (!pilha.isVazio() && !isParenteses((String) pilha.getTopo()) && !(getPrioridade(e) > getPrioridade((String) pilha.getTopo()))) {
-                    resposta += " " + pilha.desempilhar();
-                }
-                pilha.empilhar(e);
-            }
-            if (isParenteses(e)) {
-                if ("(".equals(e)) {
-                    pilha.empilhar(e);
-                } else if (")".equals(e)) {
-                    while (!"(".equals(pilha.getTopo())) {
-                        resposta += " " + pilha.desempilhar();
-                    }
-                    pilha.desempilhar();
-                }
-            }
-        }
-        while (!pilha.isVazio()) {
-            resposta += " " + pilha.desempilhar();
-        }      
-        resposta = resposta.trim();
-        return resposta;
-    }
-\end{lstlisting}
-
-Estudo da complexidade linha a linha:
-\begin{itemize}
-  \item Linhas:  3, 4, 5, 10, 11 - 1
-  \item Linhas: 12, 13, 14, 16, 17, 19, 20, 21, 23, 25,26, 27, 28, 29, 30, 32,
-  36, 37 - n
-  \item Linhas: 39, 40 - 1
-\end{itemize}
-Ao final teremos \(18n+7\), ou seja \(O(n)=n\).
-
-Ou seja, a curva $O(n)$ apresenta um crescimento linear, que varia de acordo com $n$ (a quantidade de elementos da pilha).
-
-\subsection{public int avaliar() throws ProcessadorException}
-\begin{lstlisting}
-    public int avaliar() throws ProcessadorException {
-        validarNumerico();        
-        Pilha p = new Pilha();
-        String[] vetor = processaRegex("[0-9]+|.", getPosfixa(false));
-        for(String e : vetor){
-            if(" ".equals(e)){
-                continue;
-            }            
-            if(isValorNumerico(e)){
-                p.empilhar(e);
-            }            
-            if(isOperador(e)){
-                int valor1, valor2, res = 0;
-                valor1 = Integer.parseInt((String)p.desempilhar());
-                valor2 = Integer.parseInt((String)p.desempilhar());
-                if("+".equals(e)){
-                    res = valor1+valor2;
-                }                
-                if("-".equals(e)){
-                    res = valor1-valor2;
-                }                
-                if("*".equals(e)){
-                    res = valor1*valor2;
-                }                
-                if("/".equals(e)){
-                    res = valor1/valor2;
-                }              
-                p.empilhar(Integer.toString(res));
-            }
-        }
-        if(p.getTamanho()>1){
-            throw new ProcessadorException("Erro ao processar expressao: " + getExpressao());
-        }
-        return Integer.parseInt((String)p.getTopo());
-    }
-\end{lstlisting}
-
-Estudo da complexidade linha a linha:
-\begin{itemize}
-  \item Linhas: 2, 3 , 4 - 1;
-  \item Linhas: 5, 6, 7, 9, 10, 12, 13, 14, 15, 16, 17, 19, 20, 22, 23, 25, 26,
-  28 - n;
-  \item Linhas: 31, 32, 34 - 1;
-\end{itemize}
-Ao final teremos \(18n+6\), ou seja \(O(n)=n\).
-
-Ou seja, a curva $O(n)$ apresenta um crescimento linear, que varia de acordo com $n$ (a quantidade de elementos da pilha).
-
-\section{Listagem de testes executados}
-Para a realização dos testes, foi criada a classe TesteExpressaoAritmetica.java e foram realizados os testes conforme consta abaixo:
-\begin{lstlisting}
-public class TesteExpressaoAritmetica
-        extends TestCase {
-
-    public TesteExpressaoAritmetica(String testName) {
-        super(testName);
-    }
-
-    public static Test suite() {
-        return new TestSuite(TesteExpressaoAritmetica.class);
-    }
-
-    public void testExpressoes() throws ProcessadorException {
-        //  Infixa                          Posfixa
-        //1 (A+B*C)                         A B C * +
-        //2 (A*(B+C)/D-E)                   A B C + * D / E -
-        //3 (A+B*(C-D*(E-F)-G*H)-I*3)       A B C D E F - * - G H * - * + I 3 * -
-        //4 (A+B*C/D*E-F)                   A B C * D / E * + F -
-        //5 (A+(B-(C+(D-(E+F)))))           A B C D E F + - + - +
-        //6 (A*(B+(C*(D+(E*(F+G))))))       A B C D E F G + * + * + *
-        ExpressaoAritmetica e = new ExpressaoAritmetica();
-        
-        //1
-        e.setExpressao("(A+B*C)");
-        assertEquals("A B C * +", e.getPosfixa(true));
-        
-        //2
-        e.setExpressao("(A*(B+C)/D-E)");
-        assertEquals("A B C + * D / E -", e.getPosfixa(true));
-        e.setExpressao("(100*(200+300)/400-500)");
-        assertEquals(-375, e.avaliar());
-        
-        //3
-        e.setExpressao("(A+B*(C-D*(E-F)-G*H)-I*J)");
-        assertEquals("A B C D E F - * - G H * - * + I J * -", e.getPosfixa(true));
-        e.setExpressao("(100+200*(300-400*(500-600)-700*800)-900*1000)");
-        assertEquals(-104839900, e.avaliar());
-        
-        //4
-        e.setExpressao("(A+B*C/D*E-F)");
-        assertEquals("A B C * D / E * + F -", e.getPosfixa(true));
-        e.setExpressao("(100+200*300/400*500-600)");
-        assertEquals(74500, e.avaliar());
-        
-        //5
-        e.setExpressao("(A+(B-(C+(D-(E+F)))))");
-        assertEquals("A B C D E F + - + - +", e.getPosfixa(true));
-        e.setExpressao("(100+(200-(300+(400-(500+600)))))");
-        assertEquals(700, e.avaliar());
-        
-        //6
-        e.setExpressao("(A*(B+(C*(D+(E*(F+G))))))");
-        assertEquals("A B C D E F G + * + * + *", e.getPosfixa(true));                
-        e.setExpressao("(1*(2-(3*(4+(5*(6+7))))))");
-        assertEquals(-205, e.avaliar());
-        
-    }
-}
-
-
-\end{lstlisting}
-Após a realização dos testes, foi verificado que todos foram bem sucedidos. 
 \section{Conclusão}
-Pode-se concluir que a utilização de pilhas é recomendável quando da necessidade de algoritmos para processar expressões aritméticas, realizando a conversão de sua forma infixa para posfixa e avaliando seu resultado. Como já ocorre em inúmeras calculadoras gráficas e científicas, tendo em vista, que a forma posfixa, e suas derivadas, de uma expressão separa elemento a elemento de uma maneira mais eficiente computacionalmente.
+Pode-se concluir que a utilização árvores de jogadas em conjunto com o algoritmo $Minimax$ é uma boa alternativa para se implementar inteligência artificial em jogos de tabuleiro, no entanto, o fator limitante é o número de jogadas disponíveis para os jogadores, uma vez que em jogos mais complexos como o Xadrez, a árvore de jogadas se tornará muito grande em um pequeno número de níveis, devendo assim ser utilizado um algoritmo de "poda" para economizar a memória do sistema.
 
 \nocite{*}					%Imprime toda a bibliografia
 \bibliography{bibliografia}		
