Adicionadas as regras do jogo. Modificações menores no texto. Modificação na bibliografia.

--- a/TrabalhoArvoresED/src/main/resources/bibliografia.bib
+++ b/TrabalhoArvoresED/src/main/resources/bibliografia.bib
@@ -20,3 +20,13 @@
 		year = {2013}, 
 		note = "[acessado em 19 de Fevereiro de 2013]"
 }
+
+@misc { KALAH,
+		author = {Diversos},
+		title = {{Mancala}},
+		howpublished = "\url{http://en.wikipedia.org/wiki/Kalah}",
+		year = {2013}, 
+		note = "[acessado em 19 de Fevereiro de 2013]"
+}
+
+
